syntax = "proto3";
package feed.api;
import "google/api/annotations.proto";
import "mobil_user_model.proto";
option go_package =  "../feed_proto/";

enum Product {
    REC = 0; // 浏览器
    VIDEO = 1; // 视频
    MICRO_VIDEO = 2; // 竖短视频
}

enum SceneId {
    FAKE_SCENE = 0;
    VIVO_RECOM_PAGE = 10001; // 视频推荐页面

}

enum ItemType {  //  TODO 根据海外业务重新定义
    FAKE_TYPE = 0;

    SHORT_VIDEO = 1;  // 短视频 类似youtube

    SMALL_VIDEO = 2; //  小视频  类似抖音

}

enum ChannelType {
    FAKE_CHANNEL = 0;

    SPORTS = 1; //  体育

    MUSIC = 2; //  音乐


}

message ItemInfo {
    // 标识Feed资讯的唯一id [必填]
    string item_id = 1;
    // 资讯类型，如图文、视频、竖短视频等
    ItemType item_type = 2;
    // 算法各个模块进行append，用于跟踪一个item使用的算法策略  TODO 需要上报埋点！ 【重要】
    string trace_id = 3;
    // 算法透传字段  可扩展
    map<string, string> extra_info = 4;
    //  标题
    string title = 5;
    //  视频来源(author)
    string author = 6;
    //  视频图片url
    string cover_img = 7;
    //  视频时长 单位 s
    uint64 video_duration = 8;
    //  点赞数
    uint64 up_count = 9;
    // 重复视频id  用于相同内容不同id的视频去重
    repeated string duplicate_id = 21;
    // 模型打分 key自定义  如a_validScore标识 模型a的valid目标打分
    map<string, float> predict_scores = 22;
    // 按位进行判断，标识item属于哪个队列，如0x0001标识冷启队列，0x0002标识普通队列，0x0004标识...
    uint64 queue_type = 23;
    // item通道号
    repeated string rec_id = 24;
}


message CommonRequest {
    // 设备相关
    DeviceInfo device_info = 1;
    // 地域相关
    LocationInfo location_info = 2;
    // 网络相关
    NetworkInfo network_info = 3;
}

message DeviceInfo {
    string android_id = 1;
    string imei = 2;
    //jail break/root
    int64  super_user = 3;
    //语言  【必须】
    string language = 4;
    //手机厂商 htc, LG, ... 【必须】
    string manufacturer = 5;
    //手机型号 Nexus 5, ... 【必须】
    string model_name = 6;
    //安卓版本号 4.4.1  【必须】
    string os_version = 7;
    //400x800, 400*600 【必须】
    string resolution = 8;
    //34:34:f3:...
    string mac_addr = 9;
    //客户端版本号  【必须】TMA_411_DEV/040411&NA/040411&2.3.4_10_1&20_15_14&samsung_GTS5570&NA&NA&V3
    string client_version = 10;
    //用户设备统一唯一标识符  【有则必须】
    string udid = 11;
    // 【有则必须】
    string oaid = 12;
};

message LocationInfo{
    //经度  【有则必须】
    float longitude = 1;
    //维度  【有则必须】
    float latitude = 2;
    //时区 【有则必须】
    string timezone = 3;
};

message NetworkInfo{ //网络相关信息
    //sim卡号
    string imsi = 1;
    //wifi, 2g, 3g...【有则必须】
    string network_type = 2;
    //运营商
    string network_operator = 3;
    //手机号
    string phone_number = 4;
    //客户端用户的ip 【有则必须】
    string client_ip = 5;
    //wifi名(Vivo-Freewifi)
    string wifi_ssid = 6;
    //wifi路由器的mac地址
    string wifi_bssid = 7;
};

message ItemQueue {
    repeated ItemInfo item_list = 1;
    int32 size = 2;
    // 召回通道权值
    int32 weight = 3;
    // 召回通道
    string rec_id = 4;
}

message UserInfo {
    // 用户的下发历史
    HistoryInfo issued_list_info = 1;
    //  TODO  用户特征加到这  如 like_tag
}

message HistoryInfo {
    repeated HistoryTerm history_term_list = 1;
}

message HistoryTerm {
    string item_id = 1;
    uint64 ts = 2;          // 下发/曝光 时间戳
}

message StrategyInfo {
    feed.api.MobilUserModel mobil_user_model = 1;
    repeated FollowInfo follow_info = 2;
    //  实时正向行为列表
    repeated string positive_items = 3;
    map<string, double> tag3_dislike_factor = 6;
    map<string, double> tag2_dislike_factor = 9;
    map<string, double> tag1_dislike_factor = 10;
    // 下发作者, 用于grc_video中的下发作者前置频控过滤
    repeated string issued_authors = 11;

    /* 当前extra内容：
     is_new_user            是否新用户
     is_new_session         是否新session
     */
    //  策略所需信息，由gr填充到StrategyInfo 透传给下游使用，原先由grc获取，后改为gr获取
    map<string,string> extra_info = 4;
};

message FollowInfo {
    string follow_partner = 1;
    string follow_id = 2;
    string follow_channel = 3;
    uint64 follow_time = 4;
};